add coffee add category

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -367,7 +367,7 @@
                     </div>
                     <div class="form-group">
                         <label for="coffee-description">Description:</label>
-                        <textarea id="coffee-description" name="coffee-description" rows="4" cols="50"></textarea>
+                        <textarea style="width: 100%; resize: none" id="coffee-description" name="coffee-description" rows="4" cols="50"></textarea>
                     </div>
                     <button class="submit-btn" id="add-coffee-btn">Add Coffee</button>
                 </div>
